# queue

./: ACKNOWLEDGEMENTS  AUTHORS  ChangeLog  HISTORY  INSTALL  MANIFEST  Makefile.am  Makefile.in  NEWS  README.md  TESTING  TODO  acconfig.h  aclocal.m4  checkpoint.h  config.h.in  configure  configure.in  define.h  getloadavg.c  getopt_long.c  handle.c  ident.c  lex.c  lex.h  lex.l  md5.c  mkinstalldirs  mrestart.c  profile.in  pty.c  qlib.c  queue.c  queue.h  queue_define.h  queue_endian.h  queue_manager.cc  queued.c  random.c  sha1.c  (+6 more)
doc/: QueueVN.texi.in  gpl.texinfo  queue.1  queue.dvi  queue.html  queue.info  queue.man  queue.man.in  queue.ps  queue.texinfo  queue_toc.html
doc/queue_manager/: queue_manager_docs.html  queue_manager_docs.sdw  queue_manager_docs.txt  queue_manager_slides.eps  queue_manager_slides.sda
doc/queue_manager/CVS/: Entries  Repository  Root
doc/queue_manager/queue_manager_slides_html/CVS/: Repository
